# mprpc

./: CMakeLists.txt  README.md
examples/: user.proto
examples/callee/: userservice.cc
src/: mprpcapplication.cc  mprpcconfig.cc  rpcprovider.cc
src/include/: mprpcapplication.h  mprpcconfig.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
